<resources>
    <string name="app_name">Evernote</string>

    <string name="title_activity_home">All Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_selected_notes">Select notes</string>
    <string name="action_add_home">Add to home screen</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_view_opt">View options</string>
    <string name="action_sync">Sync</string>
    <string name="action_search">Search</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_all_notes">All Notes</string>
    <string name="menu_notebooks">Notebooks</string>
    <string name="menu_share_with_me">Shared with Me</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_shortcut">Shortcuts</string>
    <string name="menu_collect_photos">Collect Photos</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_sync">LAST SYNC</string>

    <string name="evernote_version_usage">You are using Evernote Basic</string>
</resources>
